{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 75,
  "lineage": "0dc85428-9199-944a-26fe-0aac49515fb0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e39ef51393e7a970",
            "domain": "vpc",
            "id": "eipalloc-08d8031f377fd2cbb",
            "network_interface": "eni-0ec7247b0a68277a7",
            "private_dns": "ip-10-0-3-247.eu-west-1.compute.internal",
            "private_ip": "10.0.3.247",
            "public_dns": "ec2-52-214-145-153.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.214.145.153",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0202869bdd0fc8c75",
            "arn": "arn:aws:ec2:eu-west-1:606832048485:instance/i-0af92436bff558188",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af92436bff558188",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ec2_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-018f336c4df81cfcb",
            "private_dns": "ip-10-0-1-163.eu-west-1.compute.internal",
            "private_ip": "10.0.1.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02a2eb6f59a7e6f20",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0be80fd8d6e5cf44e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec94157b6c6e1906",
            "tags": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0be80fd8d6e5cf44e"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "aws_security_group.bastion",
            "aws_subnet.public_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03d664d6d9f14d990",
            "owner_id": "606832048485",
            "tags": {
              "Name": "Devops_IGW"
            },
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_apps",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:606832048485:loadbalancer/app/private-apps-alb/3fd725a34aaab13e",
            "arn_suffix": "app/private-apps-alb/3fd725a34aaab13e",
            "dns_name": "private-apps-alb-1967597232.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:606832048485:loadbalancer/app/private-apps-alb/3fd725a34aaab13e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-apps-alb",
            "security_groups": [
              "sg-03c14d9bd2f028b20",
              "sg-09c6b3b535f2b2071"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ec94157b6c6e1906"
              },
              {
                "subnet_id": "subnet-0f614af8fc05cb5f1"
              }
            ],
            "subnets": [
              "subnet-0ec94157b6c6e1906",
              "subnet-0f614af8fc05cb5f1"
            ],
            "tags": {
              "Environment": "Dev"
            },
            "vpc_id": "vpc-025c0d7ca73668b18",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.git",
            "aws_security_group.jenkins",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "git-80",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:606832048485:listener/app/private-apps-alb/3fd725a34aaab13e/28b53b82e5dba02d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:606832048485:targetgroup/git-80/92637b31b713021d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:606832048485:listener/app/private-apps-alb/3fd725a34aaab13e/28b53b82e5dba02d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:606832048485:loadbalancer/app/private-apps-alb/3fd725a34aaab13e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.alb_apps",
            "aws_lb_target_group.git-80",
            "aws_security_group.git",
            "aws_security_group.jenkins",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jenkins-master-8080",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:606832048485:listener/app/private-apps-alb/3fd725a34aaab13e/3e5df948c89fc7af",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:606832048485:targetgroup/jenkins-master-8080/6e69c9b8f0cd3cb6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:606832048485:listener/app/private-apps-alb/3fd725a34aaab13e/3e5df948c89fc7af",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:606832048485:loadbalancer/app/private-apps-alb/3fd725a34aaab13e",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.alb_apps",
            "aws_lb_target_group.jenkins-master-8080",
            "aws_security_group.git",
            "aws_security_group.jenkins",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "git-80",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:606832048485:targetgroup/git-80/92637b31b713021d",
            "arn_suffix": "targetgroup/git-80/92637b31b713021d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 8,
                "matcher": "200,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:606832048485:targetgroup/git-80/92637b31b713021d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "git-80",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins-master-8080",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:606832048485:targetgroup/jenkins-master-8080/6e69c9b8f0cd3cb6",
            "arn_suffix": "targetgroup/jenkins-master-8080/6e69c9b8f0cd3cb6",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 8,
                "matcher": "200,403",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:606832048485:targetgroup/jenkins-master-8080/6e69c9b8f0cd3cb6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jenkins-master-8080",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d8031f377fd2cbb",
            "id": "nat-0847b30c5395d876e",
            "network_interface_id": "eni-0ec7247b0a68277a7",
            "private_ip": "10.0.3.247",
            "public_ip": "52.214.145.153",
            "subnet_id": "subnet-0ca4b6de2b6fed557"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_subnet.private_subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f2e6acb3b6f3886d",
            "owner_id": "606832048485",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0847b30c5395d876e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_Subnet_RT"
            },
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw1",
            "aws_subnet.private_subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03b6be93cc3afaced",
            "owner_id": "606832048485",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d664d6d9f14d990",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Subnet_RT"
            },
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02233bfb0d90c0cfd",
            "route_table_id": "rtb-0f2e6acb3b6f3886d",
            "subnet_id": "subnet-0ca4b6de2b6fed557"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw1",
            "aws_route_table.private_route",
            "aws_subnet.private_subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0752257f601c9eded",
            "route_table_id": "rtb-0f2e6acb3b6f3886d",
            "subnet_id": "subnet-0eab1f46b3eb52518"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw1",
            "aws_route_table.private_route",
            "aws_subnet.private_subnet1",
            "aws_subnet.private_subnet2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ae7b3499e20f1b1",
            "route_table_id": "rtb-03b6be93cc3afaced",
            "subnet_id": "subnet-0ec94157b6c6e1906"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa1611280b887a29",
            "route_table_id": "rtb-03b6be93cc3afaced",
            "subnet_id": "subnet-0f614af8fc05cb5f1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:606832048485:security-group/sg-0be80fd8d6e5cf44e",
            "description": "Allowing incoming SSH access and pings",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be80fd8d6e5cf44e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": null,
            "owner_id": "606832048485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:606832048485:security-group/sg-0a7e5426f8047dacc",
            "description": "Allowing traffic from private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7e5426f8047dacc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db",
            "name_prefix": null,
            "owner_id": "606832048485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs-general",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:606832048485:security-group/sg-0a03350a35a945932",
            "description": "Allowing incoming NFS ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a03350a35a945932",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-general",
            "name_prefix": null,
            "owner_id": "606832048485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EFS SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "git",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:606832048485:security-group/sg-09c6b3b535f2b2071",
            "description": "Allowing traffic from public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c6b3b535f2b2071",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7990,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7990
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "git",
            "name_prefix": null,
            "owner_id": "606832048485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Git SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:606832048485:security-group/sg-03c14d9bd2f028b20",
            "description": "Allowing traffic from public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c14d9bd2f028b20",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24",
                  "10.0.4.0/24",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins",
            "name_prefix": null,
            "owner_id": "606832048485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:606832048485:security-group/sg-0fdba59f7e3fb15f3",
            "description": "Allowing traffic from private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdba59f7e3fb15f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis",
            "name_prefix": null,
            "owner_id": "606832048485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Redis SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:606832048485:subnet/subnet-00948340f00dbc8cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-00948340f00dbc8cc",
            "map_public_ip_on_launch": false,
            "owner_id": "606832048485",
            "tags": {
              "Name": "DB_PrivateSubnet1"
            },
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:606832048485:subnet/subnet-04fc096893ce312d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-04fc096893ce312d9",
            "map_public_ip_on_launch": false,
            "owner_id": "606832048485",
            "tags": {
              "Name": "DB_PrivateSubnet2"
            },
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:606832048485:subnet/subnet-0ca4b6de2b6fed557",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0ca4b6de2b6fed557",
            "map_public_ip_on_launch": false,
            "owner_id": "606832048485",
            "tags": {
              "Name": "App_PrivateSubnet1"
            },
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:606832048485:subnet/subnet-0eab1f46b3eb52518",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0eab1f46b3eb52518",
            "map_public_ip_on_launch": false,
            "owner_id": "606832048485",
            "tags": {
              "Name": "App_PrivateSubnet2"
            },
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:606832048485:subnet/subnet-0ec94157b6c6e1906",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ec94157b6c6e1906",
            "map_public_ip_on_launch": false,
            "owner_id": "606832048485",
            "tags": {
              "Name": "Web_PublicSubnet1"
            },
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:606832048485:subnet/subnet-0f614af8fc05cb5f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f614af8fc05cb5f1",
            "map_public_ip_on_launch": false,
            "owner_id": "606832048485",
            "tags": {
              "Name": "Web_PublicSubnet2"
            },
            "vpc_id": "vpc-025c0d7ca73668b18"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:606832048485:vpc/vpc-025c0d7ca73668b18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0713d342b162bbf4e",
            "default_route_table_id": "rtb-0c3ae1ae39551908a",
            "default_security_group_id": "sg-05491252923693596",
            "dhcp_options_id": "dopt-8ee1aae8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-025c0d7ca73668b18",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c3ae1ae39551908a",
            "owner_id": "606832048485",
            "tags": {
              "Name": "Devops_VPC"
            }
          }
        }
      ]
    }
  ]
}